# cloud_lab_practicum_task-3

./: CMakeLists.txt  README.md
.github/classroom/: autograding.json
include/cloudlab/: kvs.hh
include/cloudlab/handler/: p2p.hh
include/cloudlab/network/: connection.hh  routing.hh
include/cloudlab/raft/: raft.hh
lib/: kvs.cc
lib/handler/: api.cc  p2p.cc
lib/message/: cloud.proto
lib/network/: address.cc  connection.cc  server.cc
lib/raft/: raft.cc
src/: argh.hh  ctl.cc  kvs.cc
tests/: socketsupport.py  test_failure_detection.py  test_leader_election.py  test_replication.py  testsupport.py
